--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -5,7 +5,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Blockchain App</title>
-   <link rel="stylesheet" href="dist/styles.css" />
+   <link rel="stylesheet" href="../../dist/normalize.css" |>
+   <link rel="stylesheet" href="../../dist/styles.css" />
    <script type="module" src="dist/browser/main.js"></script>
 </head>
 
