доработки для блока transactions

--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -24,11 +24,13 @@
                   <div class="blockchain-block__container">
                      <h2 class="blockchain-block__title">Add Transaction</h2>
                      <div class="transactions__fields">
-                        <input id="sender" type="text" autocomplete="off" disabled placeholder="Sender"
-                           class="sender-input input" />
-                        <span class="arrow-right"></span>
-                        <input id="recipient" type="text" autocomplete="off" disabled placeholder="Recipient"
-                           class="recipient-input input" />
+                        <div class="transactions__fields-wrapper">
+                           <input id="sender" type="text" autocomplete="off" disabled placeholder="Sender"
+                              class="sender-input input" />
+                           <span class="arrow-right"></span>
+                           <input id="recipient" type="text" autocomplete="off" disabled placeholder="Recipient"
+                              class="recipient-input input" />
+                        </div>
                         <input id="number" type="number" autocomplete="off" disabled placeholder="Amount"
                            class="amount-input input" />
                      </div>
