стили для блоков

--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -7,7 +7,7 @@
    <title>Blockchain App</title>
    <link rel="stylesheet" href="../../dist/normalize.css" |>
    <link rel="stylesheet" href="../../dist/styles.css" />
-   <script type="module" src="dist/browser/main.js"></script>
+   <script type="module" src="../../dist/browser/main.js"></script>
 </head>
 
 <body>
