дорабатывал стили и логику при добавлении транзакций

--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -46,6 +46,8 @@
                <section class="blockchain__pending pending blockchain-block">
                   <div class="blockchain-block__container">
                      <h2 class="blockchain-block__title">Pending transactions</h2>
+                     <p id="notification" class="pending__notification">No pending transactions at the
+                        moment.</p>
                      <ul id="pending-list" class="pending__list"></ul>
                      <div class="blockchain-block__controls">
                         <button id="confirm" class="pending__confirm-btn btn" type="button" disabled>Confirm
