--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -32,8 +32,8 @@
                            <input id="recipient" type="text" autocomplete="off" disabled required
                               pattern="[A-Za-zА-Яа-яЁё]{2,15}" placeholder="Recipient" class="recipient-input input" />
                         </div>
-                        <input id="number" type="number" autocomplete="off" disabled required min="1"
-                           placeholder="Amount" class="amount-input input" />
+                        <input id="number" type="number" autocomplete="off" disabled required min="1" placeholder="0"
+                           class="amount-input input" />
                      </div>
                      <div class="blockchain-block__controls">
                         <button id="transfer" class="transactions__transfer-btn btn" type="submit" disabled>Transfer
