--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -58,7 +58,11 @@
                <section class="blockchain__state state blockchain-block">
                   <div class="blockchain-block__container">
                      <h2 class="blockchain-block__title">Blockchain state</h2>
-                     <div id="blocks" class="state__wrapper"></div>
+                     <div id="blocks" class="state__wrapper">
+                        <div class="loader-wrapper">
+                           <div class="loader"></div>
+                        </div>
+                     </div>
                   </div>
                </section>
 
