--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
    <title>Blockchain App</title>
+   <link rel="icon" href="../../dist/blockchain.png" />
    <link rel="stylesheet" href="../../dist/normalize.css" |>
    <link rel="stylesheet" href="../../dist/styles.css" />
    <script type="module" src="../../dist/browser/main.js"></script>
